website/i18n/de/docusaurus-plugin-content-docs/version-13.0/about-the-consoles/pearl-expert-and-touch-wing.md
---
id: pearl-expert-and-touch-wing
title: Pearl Expert and Touch Wing
sidebar_label: Pearl Expert and Touch Wing
original_id: pearl-expert-and-touch-wing
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

![Pearl Expert](/docs/images/Pearl-Expert.png)

Das Pearl Expert hat vier grundsätzliche Bedienbereiche:

\(A\) Mit den <strong>Masterfadern</strong> bestimmt man den generellen Ausgangspegel.

\(B\) Mit den Elementen der Abteilung <strong>Preset Playbacks und Geräte</strong> hat man
unmittelbaren Zugriff auf die anzusteuernden Geräte, und kann hier
einzelnen Cues/Cuelisten/Chaser etc. abspeichern.

\(C\) Mit <strong>Playbacks, Walze und Seitenumschaltung</strong> wird auf die einzelnen
Speicherplätze zum Programmieren und Abrufen zugegriffen.

\(D\) Die <strong>Programmier- und Steuereinheit</strong> dient zum Einrichten des Pultes
sowie zum eigentlichen Programmieren.

![Pearl Expert](/docs/images/Pearl-Expert-2.png)

## Bedienoberfläche

\(E\) Mit den Reglern im Bereich <strong>Geräteanwahl/Presets</strong> lassen sich einzelne
Dimmer und Geräte steuern. Ebenso können hier auch komplette Bilder und
Abläufe gespeichert werden. Mit den beiden Tasten unter jedem Regler
wird der jeweilige Inhalt eingeblendet (Flash/Solo). Jeder Regler bildet
mit den zugehörigen Tasten eine Bedieneinheit (\'Handle\').

\(F\) Mittels der beiden <strong>Auswahlwalzen</strong> lässt sich die Seite für jeweils 10
Playbacks wählen. Die einzelnen Speicherplätze lassen sich auf der Walze
beschriften.

\(G\) Mit den <strong>Masterfadern</strong> lässt sich der globale Ausgangspegel des Pultes
einstellen; normalerweise wird man diese Regler auf 100% stellen.

\(H\) Die <strong>Playbacks</strong> mit den zugehörigen Flash-/Solotasten dienen zum
Programmieren und Abrufen der einzelnen Speicherplätze.

\(I\) Das <strong>Display</strong> ist die Schaltzentrale des Pultes, es bietet wichtige
Informationen über den jeweiligen Status.

\(J\) Die <strong>Encoder (Räder)</strong> dienen zum Einstellen bestimmter Werte, etwa von
Attributen der Geräte, Geschwindigkeit von Chasern etc.

\(K\) Die <strong>Menütasten</strong> (beschriftet mit A -- G) dienen zur Auswahl
verschiedener Steuerungsoptionen. Im Display wird direkt neben jedem
Taster die jeweilige Funktion angezeigt, abhängig vom jeweiligen Status
des Pultes. Befehle dieser Taster sind in diesem Handbuch blau dargestellt, 
z.B. <Keys.SoftKey>Edit Times</Keys.SoftKey>.

\(L\) Mit den <strong>Ziffern- und Steuertasten</strong> lassen sich Werte eingeben sowie
Einstellungen des Pultes ändern.

\(M\) Die Tasten zur <strong>Geräte-Seitenwahl</strong> befinden sich oberhalb des
Ziffernblocks und gestatten die Auswahl von 4 Seiten der
Geräte-/Szenenregler.

\(N\) Mit den blauen <strong>Funktionstasten</strong> sind verschiedene Funktionen
verknüpft, etwa Speichern von Cues, Kopieren, Speichern auf Disk. Ist
ein solcher Taster aktiv, so wird das jeweils durch eine LED angezeigt.

\(O\) Mit den Tastern der <strong>Attributauswahl</strong> werden die Attribute der Geräte
angewählt (z.B. Farbe, Gobo, Bewegung, Fokus), welche dann durch die
Encoder gesteuert werden sollen. Die jeweils aktiven Taster werden durch
LEDs angezeigt. Der untere (rote) Taster erlaubt das 'Locaten'
(Lokalisieren) von Geräten, indem sie auf eine vordefinierte
Startposition gesetzt werden.

- Der <strong>Einschalter</strong> befindet sich links vorn unter der Auflage.

- Eine <strong>Tastatur mit Touchpad</strong> befindet sich in einer Schublade vorne am
Pult.

## Anschlussfeld auf der Rückseite

![Pearl Expert Back Panel](/docs/images/Pearl-Expert-Back-Panel.png)

Sämtliche für das Pult erforderlichen Anschlüsse befinden sich auf der
Rückseite. Die meisten davon sind selbsterklärend.

\(P\) Vier DMX-Anschlüsse sowie MIDI Ein- und Ausgang.


\(Q\) Mit dem Resettaster für die Bedienoberfläche kann die Elektronik der
Steueroberfläche zurückgesetzt werden, wenn die Schalter und
Regler falsch reagieren. Die Programmlogik (Hauptplatine) wird
davon nicht betroffen, allerdings wird die DMX-Ausgabe
unterbrochen, bis der Neustart erfolgt ist.

\(R\) Der reservierte USB-Anschluss und Umschalter ist für künftige
Erweiterungen vorgesehen. Der Schalter sollte auf "Normal
operation" belassen werden.

\(S\) Der Netzschalter oberhalb des Netzanschlusses trennt das Pult
komplett vom Netz. Verwenden Sie diesen Schalter nicht, um das Pult
normal auszuschalten.
	
## Das Pearl Expert Touch Wing

![Pearl Expert Touch Wing](/docs/images/Pearl-Expert-Touch-Wing.png)

Das optionale Pearl Expert Touch Wing gestattet mit dem
berührungs­empfindlichen Display und den zusätzlichen Rädern das
gewohnte Arbeiten zur Auswahl von Geräten, Paletten, Gruppen und zum
Einstellen von Attributen. Es funktioniert nur mit dem Pearl Expert und
wird an die rückseitigen gesonderten Buchsen angeschlossen (DVI und
Sub-D 9-pol, die aber spezielle Signale führen).

\(T\) Der Hauptbereich des Touch Wings zeigt verschiedene <strong>Arbeitsfenster</strong>.
Deren Inhalt, Funktion und Größe lässt sich mit den entsprechenden
Tasten unterhalb des Displays steuern.

\(U\) Die Anordnung der Fenster lässt sich als <strong>Arbeitsumgebung</strong> speichern
und mit den Schaltflächen rechts wieder abrufen.

Einige Fenster bieten zusätzliche Funktionen; dazu werden oben rechts im
Display entsprechende <strong>kontextabhängige Schaltflächen</strong> eingeblendet.

\(V\) Die drei <strong>Encoder (Räder)</strong> übernehmen die Attribut-Steuerung von den
Rädern des Pultes, welche dann für die Steuerung von Geschwindigkeit und
Crossfade von Chasern zur Verfügung stehen. Betätigen der
&nbsp;<strong>Bildlaufschalter</strong> (unterhalb der Räder) schaltet die Räder in den
Bildlauf-Modus: damit lässt sich eine Auswahlbox über den Bildschirm
bewegen.

\(W\) Die <strong>Attributanzeige</strong> zeigt die momentan bearbeiteten Attribute mit
ihren aktuellen Werten an. Berührt man diese Schaltflächen so wird das
jeweilige Attribut auf seinen Minimal-/Maximalwert gesetzt.

\(X\) Am unteren Rand des Bildschirms befindet sich der Informationsbereich
mit Details der aktuell angewählten <strong>Playbacks</strong>.
