website/i18n/de/docusaurus-plugin-content-docs/version-19.0/about-the-consoles/pearl-expert-and-touch-wing.md
---
id: pearl-expert-and-touch-wing
title: Pearl Expert und Touch Wing
sidebar_label: Pearl Expert und Touch Wing
description: Pearl Expert und Touch Wing - console design and features
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

![Pearl Expert](/docs/images/Pearl-Expert.png)

Das Pearl Expert hat vier grundsätzliche Bedienbereiche:

&nbsp;<Keys.Annotation>A</Keys.Annotation> Mit den **Masterfadern** bestimmt 
man den generellen Ausgangspegel.

&nbsp;<Keys.Annotation>B</Keys.Annotation> Mit den Elementen der Abteilung 
**Preset Playbacks und Geräte** hat man unmittelbaren Zugriff auf die 
anzusteuernden Geräte, kann hier aber aucheinzelnen Cues/Cuelisten/Chaser 
etc. abspeichern.

&nbsp;<Keys.Annotation>C</Keys.Annotation> Mit **Playbacks, Walze und 
Seitenumschaltung** wird auf die einzelnen Speicherplätze zum Programmieren 
und Abrufen zugegriffen.

&nbsp;<Keys.Annotation>D</Keys.Annotation> Die **Programmier- und Steuereinheit** 
dient zum Einrichten des Pultes sowie zum eigentlichen Programmieren.

![Pearl Expert](/docs/images/Pearl-Expert-2.png)

## Bedienoberfläche

&nbsp;<Keys.Annotation>E</Keys.Annotation> Mit den Reglern im Bereich 
**Geräteanwahl/Presets** lassen sich einzelne
Dimmer und Geräte steuern. Ebenso können hier auch komplette Bilder und
Abläufe gespeichert werden. Mit den beiden Tasten unter jedem Regler
wird der jeweilige Inhalt eingeblendet (Flash/Solo). Jeder Regler bildet
mit den zugehörigen Tasten eine Bedieneinheit ('Handle').

&nbsp;<Keys.Annotation>F</Keys.Annotation> Mittels der beiden **Auswahlwalzen** 
lässt sich die Seite für jeweils 10 Playbacks wählen. Die einzelnen 
Speicherplätze lassen sich auf der Walze beschriften.

&nbsp;<Keys.Annotation>G</Keys.Annotation> Mit den **Masterfadern** 
lässt sich der globale Ausgangspegel des Pultes
einstellen; normalerweise wird man diese Regler auf 100% stellen.

&nbsp;<Keys.Annotation>H</Keys.Annotation> Die **Playbacks** mit den zugehörigen 
Flash-/Solotasten dienen zum Speichern und Abrufen der einzelnen Stimmungen.

&nbsp;<Keys.Annotation>I</Keys.Annotation> Das **Display** ist die 
Schaltzentrale des Pultes, es bietet wichtige Informationen über den 
jeweiligen Status.

&nbsp;<Keys.Annotation>J</Keys.Annotation> Die **Encoder (Räder)** dienen 
zum Einstellen bestimmter Werte, etwa von Attributen der Geräte, 
Geschwindigkeit von Chasern etc.

&nbsp;<Keys.Annotation>K</Keys.Annotation> Die **Menütasten** (beschriftet 
mit A -- G) dienen zur Auswahl verschiedener Steuerungsoptionen. Im Display 
wird direkt neben jedem Taster die jeweilige Funktion angezeigt, abhängig 
vom jeweiligen Status des Pultes. Befehle dieser Taster sind in diesem 
Handbuch blau dargestellt, z.B. <Keys.SoftKey>Edit Times</Keys.SoftKey>.

&nbsp;<Keys.Annotation>L</Keys.Annotation> Mit den **Ziffern- und 
Steuertasten** lassen sich Werte eingeben sowie Einstellungen des Pultes ändern.

&nbsp;<Keys.Annotation>M</Keys.Annotation> Die Tasten zur **Geräte-Seitenwahl** 
befinden sich oberhalb des Ziffernblocks und gestatten die Auswahl von 
4 Seiten der Geräte-/Szenenregler (Preset Fader).

&nbsp;<Keys.Annotation>N</Keys.Annotation> Mit den blauen **Funktionstasten** 
sind verschiedene Funktionen verknüpft, etwa Speichern von Cues, Kopieren, 
Speichern auf Disk. Ist ein solcher Taster aktiv, so wird das jeweils 
durch eine LED angezeigt.

&nbsp;<Keys.Annotation>O</Keys.Annotation> Mit den Tastern der 
**Attributauswahl** werden die Attribute der Geräte
angewählt (z.B. Farbe, Gobo, Bewegung, Fokus), welche dann durch die
Encoder gesteuert werden sollen. Die jeweils aktiven Taster werden durch
LEDs angezeigt. Der untere (rote) Taster erlaubt das 'Locaten'
(Lokalisieren) von Geräten, indem diese auf eine vordefinierte
Startposition gesetzt werden.

- Der **Einschalter** befindet sich links vorn unter der Auflage.

- Eine **Tastatur mit Touchpad** befindet sich in einer Schublade vorne am
Pult.

## Anschlussfeld auf der Rückseite

![Pearl Expert Back Panel](/docs/images/Pearl-Expert-Back-Panel.png)

Sämtliche für das Pult erforderlichen Anschlüsse befinden sich auf der
Rückseite. Die meisten davon sind selbsterklärend.

&nbsp;<Keys.Annotation>P</Keys.Annotation> Vier DMX-Anschlüsse sowie 
MIDI Ein- und Ausgang.

&nbsp;<Keys.Annotation>Q</Keys.Annotation> Mit dem Resettaster für die 
Bedienoberfläche kann die Elektronik der Steueroberfläche zurückgesetzt 
werden, wenn die Schalter und Regler falsch reagieren. Die Programmlogik 
(Hauptplatine) wird davon nicht betroffen, allerdings wird die DMX-Ausgabe
unterbrochen, bis der Neustart erfolgt ist.

&nbsp;<Keys.Annotation>R</Keys.Annotation> Der reservierte USB-Anschluss 
und Umschalter ist für künftige Erweiterungen vorgesehen. Der Schalter 
sollte auf "Normal operation" belassen werden.

&nbsp;<Keys.Annotation>S</Keys.Annotation> Der Netzschalter oberhalb 
des Netzanschlusses trennt das Pult komplett vom Netz. Verwenden Sie 
diesen Schalter nicht, um das Pult normal auszuschalten, sondern fahren 
sie es mit dem Einschalttaster vorn links herauf/herunter.

## Das Pearl Expert Touch Wing

![Pearl Expert Touch Wing](/docs/images/Pearl-Expert-Touch-Wing.png)

Das optionale Pearl Expert Touch Wing gestattet mit dem
berührungsempfindlichen Display und den zusätzlichen Rädern das
gewohnte Arbeiten zur Auswahl von Geräten, Paletten, Gruppen und zum
Einstellen von Attributen. Es funktioniert nur mit dem Pearl Expert und
wird an die rückseitigen gesonderten Buchsen angeschlossen (DVI und
Sub-D 9-pol, die aber spezielle Signale führen).

&nbsp;<Keys.Annotation>T</Keys.Annotation> Der Hauptbereich des Touch Wings 
zeigt verschiedene **Arbeitsfenster**. Deren Inhalt, Funktion und Größe 
lässt sich mit den entsprechenden Tasten unterhalb des Displays steuern.

&nbsp;<Keys.Annotation>U</Keys.Annotation> Die Anordnung der Fenster lässt 
sich als **Arbeitsumgebung** (Workspace) speichern
und mit den Schaltflächen rechts wieder abrufen.

Einige Fenster bieten zusätzliche Funktionen; dazu werden oben rechts im
Display entsprechende **kontextabhängige Schaltflächen** eingeblendet.

&nbsp;<Keys.Annotation>V</Keys.Annotation> Die drei **Encoder (Räder)** 
übernehmen die Attribut-Steuerung von den Rädern des Pultes, welche dann 
für die Steuerung von Geschwindigkeit und Crossfade von Chasern zur 
Verfügung stehen. Betätigen der **Bildlaufschalter** (unterhalb der 
Räder) schaltet die Räder in den Bildlauf-Modus: damit lässt sich eine 
Auswahlbox über den Bildschirm bewegen.

&nbsp;<Keys.Annotation>W</Keys.Annotation> Die **Attributanzeige** zeigt 
die momentan bearbeiteten Attribute mit ihren aktuellen Werten an. Berührt 
man diese Schaltflächen, so wird das jeweilige Attribut auf seinen Minimal-/
Maximalwert gesetzt.

&nbsp;<Keys.Annotation>X</Keys.Annotation> Am unteren Rand des Bildschirms 
befindet sich der Informationsbereich mit Details der aktuell angewählten 
**Playbacks**.
